<!--
   Copyright 2020 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Pixel Minimal Watch Face</string>

    <string name="loading_premium_status">Loading…</string>
    <string name="premium_status">You\'re premium!</string>
    <string name="premium_status_not_installed">To continue, please install the Watch Face on your watch by clicking on the install button below.\n\nWhen installed and launched on your Watch, use the Sync button bellow to sync your premium status and enable widgets and weather display.\n\nIf you have any issue, please contact me using the menu.</string>
    <string name="premium_status_installed">You can setup widgets and weather display on your watch, using the Watch Face settings!\n\nUse the Sync button bellow to sync your premium status to your watch if needed.\n\nIf you have any issue, please contact me using the menu.</string>
    <string name="premium_status_loading">Looking for the Watch Face on your watch to sync premium status…</string>
    <string name="premium_status_unknown">You can setup your watch face widgets and weather display on your watch!\n\nMake sure you installed Pixel Minimal Watch Face on your Watch too.\n\nIf you have any issue, please contact me using the menu.</string>
    <string name="premium_status_thanks">Thank you so much for your support :)</string>
    <string name="premium_sync_cta">Sync premium status with Watch</string>
    <string name="premium_install_cta">Install Watch Face on Watch</string>
    <string name="premium_error_title">Oops</string>
    <string name="premium_error">Unable to reach PlayStore to verify your premium status.\n\nPlease check your connection and try again.\n(%s)</string>
    <string name="error_retry_cta">Retry</string>
    <string name="syncing_premium_status">Syncing with watch…</string>
    <string name="not_premium_install">You can use the Watch Face for free on your watch.</string>
    <string name="not_premium_status">To unlock widgets and weather, become a premium user:</string>
    <string name="not_premium_status_2">(1 time payment, no hidden fees)</string>
    <string name="premium_cta">Become premium</string>
    <string name="promocode_cta">Redeem code</string>
    <string name="error_syncing_title">Error syncing with watch</string>
    <string name="error_syncing_message">An error occurred while syncing with your watch. Please check connection and try again.\n(%s)</string>
    <string name="error_paying_title">An error occurred</string>
    <string name="error_paying_message">An error occurred while processing your payment. Please check your connection and try again.\n(%s)</string>
    <string name="voucher_redeem_dialog_title">Promo code</string>
    <string name="voucher_redeem_dialog_message">Enter your promo code</string>
    <string name="voucher_redeem_dialog_cta">Redeem</string>
    <string name="voucher_redeem_error_dialog_title">Oops</string>
    <string name="voucher_redeem_error_code_invalid_dialog_message">Your promo code is invalid.</string>
    <string name="iab_purchase_error_title">Oops</string>
    <string name="iab_purchase_error_message">An error occurred, check your connection and try again later.</string>
    <string name="send_feedback_cta">Send feedback or report bug</string>
    <string name="copyright">Version %s. Made by Benoit Letondor</string>
    <string name="feedback_email" translatable="false">pixelwatchface@benoitletondor.com</string>
    <string name="feedback_send_subject" translatable="false">Pixel Watch Face - Feedback</string>
    <string name="premium_1_title">4 customisable widgets and weather info, beautifully integrated</string>
    <string name="premium_2_title">Choose the widgets you want</string>
    <string name="premium_3_title">Pick the widgets accent color</string>
    <string name="sync_succeed_message">Sync done! Check your watch.</string>
    <string name="onboarding_title">Welcome into Pixel Minimal Watch Face companion app</string>
    <string name="onboarding_text">This companion phone app is here to help you becoming premium to unlock widgets and weather.\n\nIf you have any issue, please contact me using the app menu for support.</string>
    <string name="onboarding_finish_cta">Let\'s go</string>
    <string name="playstore_opened_on_watch_message">Opening PlayStore on Watch…</string>
    <string name="playstore_not_opened_on_watch_title">Unable to open PlayStore</string>
    <string name="playstore_not_opened_on_watch_message">An error occurred opening the PlayStore on your Watch.\n\nInstall the Watch Face on your watch manually by searching on your watch\'s PlayStore:\n\"Pixel Minimal Watch Face\"\n\n(Be careful not to install another watch face by mistake called \"Pixel Watch Face\", it\'s nearly the same name!)</string>
</resources>
