<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2020 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_activity_loading_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/main_activity_loading_view_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40" />

        <TextView
            android:id="@+id/main_activity_loading_view_loading_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loading_premium_status"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/main_activity_loading_view_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/main_activity_premium_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/main_activity_premium_view_premium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/premium_status"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/main_activity_premium_view_premium_text_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/premium_status_2"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_premium_view_premium_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/main_activity_premium_view_install_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_install_cta"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_premium_view_premium_text_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/main_activity_premium_view_sync_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_sync_cta"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_premium_view_install_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/main_activity_error_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/main_activity_error_view_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:text="@string/premium_error_title"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/main_activity_error_view_text_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_error_view_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/main_activity_error_view_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_retry_cta"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_error_view_text_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_activity_syncing_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/main_activity_syncing_view_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40" />

        <TextView
            android:id="@+id/main_activity_syncing_view_loading_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/syncing_premium_status"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/main_activity_syncing_view_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/main_activity_not_premium_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/main_activity_not_premium_view_not_premium_view_pager"
                android:layout_width="0dp"
                android:layout_height="380dp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/main_activity_not_premium_view_not_premium_view_pager_indicator"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                app:ci_drawable="@drawable/pager_indicator"
                app:ci_drawable_unselected="@drawable/pager_indicator"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_not_premium_view_not_premium_view_pager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/main_activity_not_premium_view_not_premium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_premium_status"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_not_premium_view_not_premium_view_pager_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/main_activity_not_premium_view_buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_cta"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_not_premium_view_not_premium_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/main_activity_not_premium_view_not_premium_text_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_premium_status_2"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_not_premium_view_buy_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/main_activity_not_premium_view_promocode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promocode_cta"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_not_premium_view_not_premium_text_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>