<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2020 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onboarding.OnboardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/onboarding_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_title"
            android:fontFamily="@font/product_sans"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/onboarding"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/onboarding_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/onboarding_text"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/onboarding_finish_cta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_finish_cta"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

